@@ -195,6 +195,9 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   need to reinstall the package
 - Added method MeetingItem._adviceDelayIsTimedOut that returns True if given groupId advice delay is timed out
 - Plone groups linked to a MeetingGroup that were removed are now recreated when the MeetingGroup is edited
+- Item id is now recomputed each time the item is edited as long as the item is in it's intial_state (WF), this avoid
+  having inconsistent item id especially when duplicating another item or creating an item from an template where the
+  item id was finally something like copy34_of_my_sample_template
 
 3.3 (2015-02-27)
 ----------------
